# lazaro

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  exercises.toml  go.mod  go.sum  lazaro.db  lazarus.db  main.go  program.toml  program2.toml  program3.toml  program4.toml
cmd/: add-set.go  calendar.go  cancel-session.go  delete-program.go  edit.go  end.go  exercise.go  history.go  init.go  look-session.go  program.go  root.go  set-note.go  show-ex.go  show-program.go  show-session.go  show.go  start.go  status.go  swap.go  sync.go  update-program.go
docs/: REFACTOR.md  TODO.md  obs.md
internal/config/: config.go
internal/models/: exercise.go  program.go  training.go
internal/storage/: exercise.go  program.go  sessions.go  storage.go  sync.go  training.go  validation.go
internal/utils/: one_rm.go  session.go  time.go  utils.go
migrations/: 0001_init.sql  0002_add_idx_and_muscle_check.sql  0002_add_muscle_check.sql  0003_create_variants_table.sql
programs/: basic.toml
sessions/: 5568eb73-19fe-44dd-946d-ed5fd5d7b14e.json
src/: cli.rs  db.rs  main.rs  models.rs  storage.rs  types.rs  utils.rs
src/commands/: calendar.rs  config.rs  db.rs  exercise.rs  mod.rs  program.rs  session.rs  status.rs
training/: berserk.toml  clayton-ex.toml  db_dump.toml  dump.toml  mister.toml  yes.toml
