[package]
name = "lazaro"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] } 

serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4", "serde"] } 
