[package]
name = "lazarus"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for managing training programs and tracking exercises"
license = "MIT"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] } 

serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4", "serde"] } 
colored = "3.0.0"
toml = "0.8"
chrono = "0.4"
once_cell = "1.21.3"
strsim = "0.11.1"
dirs = "6.0.0"
serde_json = "1.0.140"
itertools = "0.14.0"
plotters = "0.3.5"
term_size = "0.3.2"
